syntax = "proto3";

package management;

option go_package = "api/managementpb;managementpb";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "managementpb/metrics.proto";

message DiscoverAzureDatabaseRequest {
  string client_id = 1;
  string client_secret = 2;
  string tenant_id = 3;
  string subscription_id = 4;
}

// DiscoverAzureDatabaseType describes supported RDS instance engines.
enum DiscoverAzureDatabaseType {
  DISCOVER_AZURE_DATABASE_TYPE_INVALID = 0;
  // MySQL type: microsoft.dbformysql/servers
  DISCOVER_AZURE_DATABASE_TYPE_MYSQL = 1;
  // PostgreSQL type: microsoft.dbformysql/servers
  DISCOVER_AZURE_DATABASE_TYPE_POSTGRESQL = 2;
}

// DiscoverAzureDatabaseInstance models an unique Azure Database instance for the list of instances returned by Discovery.
message DiscoverAzureDatabaseInstance {
  string id = 1;
  string location = 2;
  string name = 3;
  string administrator_login = 4;
  string fully_qualified_domain_name = 5;
  string resource_group = 6;
  string environment = 7;
  DiscoverAzureDatabaseType type = 8;
  string zones = 9;
}

message DiscoverAzureDatabaseResponse {
  repeated DiscoverAzureDatabaseInstance azure_database_instance = 1;
}

message AddAzureDatabaseRequest {
  // Azure region.
  string region = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // AWS availability zone.
  string az = 2;
  // AWS instance ID.
  string instance_id = 3 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Azure instance class.
  string node_model = 4;
  // Address used to connect to it.
  string address = 5 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Access port.
  uint32 port = 6 [
    (validator.field) = {
      int_gt: 0
    }
  ];
  // Unique across all Nodes user-defined name. Defaults to Azure Database instance ID.
  string node_name = 8;
  // Unique across all Services user-defined name. Defaults to Azure Database instance ID.
  string service_name = 9;
  // Environment name.
  string environment = 10;
  // Username for scraping metrics.
  string username = 13 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  // Password for scraping metrics.
  string password = 14;
  // Azure database client ID
  string azure_database_client_id = 29;
  // Azure database client secret
  string azure_database_client_secret = 30;
  // Azure database tanant ID
  string azure_database_tenant_id = 31;
  // Azure database subscription ID
  string azure_database_subscription_id = 32;
  // If true, adds azure_exporter.
  bool azure_exporter = 17;
  // If true, adds qan-mysql-perfschema-agent.
  bool qan_mysql_perfschema = 18;
  // Custom user-assigned labels for Node and Service.
  map<string, string> custom_labels = 19;
  // Skip connection check.
  bool skip_connection_check = 20;
  // Use TLS for database connections.
  bool tls = 21;
  // Skip TLS certificate and hostname validation.
  bool tls_skip_verify = 22;
  // Disable query examples.
  bool disable_query_examples = 23;
  // Tablestats group collectors will be disabled if there are more than that number of tables.
  // If zero, server's default value is used.
  // Use negative value to disable them.
  int32 tablestats_group_table_limit = 24;
  // Disable basic metrics.
  bool disable_basic_metrics = 25;
  // Disable enhanced metrics.
  bool disable_enhanced_metrics = 26;
  // Defines metrics flow model for this exporter.
  // Push metrics mode is not allowed.
  MetricsMode metrics_mode = 27;
  DiscoverAzureDatabaseType type = 28;
}

message AddAzureDatabaseResponse {}

// AzureDatabase service provides Service Discovery APIs.
service AzureDatabase {
  // DiscoverAzureDatabase discovers Azure Database for MySQL and PostgreSQL Server instances.
  rpc DiscoverAzureDatabase(DiscoverAzureDatabaseRequest) returns (DiscoverAzureDatabaseResponse) {
    option (google.api.http) = {
      post: "/v1/management/AzureDatabase/Discover"
      body: "*"
    };
  }
  // AddAzureDatabase adds Azure Database instance.
  rpc AddAzureDatabase(AddAzureDatabaseRequest) returns (AddAzureDatabaseResponse) {
    option (google.api.http) = {
      post: "/v1/management/AzureDatabase/Add"
      body: "*"
    };
  }
}
